--- a/crud_op/index.html
+++ b/crud_op/index.html
@@ -114,9 +114,7 @@
         </tbody>
     </table>
 
-    <script>
-        // Puedes agregar el código JavaScript necesario aquí para manejar la lógica del CRUD
-    </script>
+    <script src="crudEmpleados.mjs"></script>
 
 </body>
 </html>
