--- a/index.html
+++ b/index.html
@@ -109,12 +109,20 @@
                 <th>Acciones</th>
             </tr>
         </thead>
-        <tbody>
-            <!-- Los registros de empleados se agregarán aquí dinámicamente -->
+        <tbody id = "cuerpo">
+            <!-- <tr>
+                <tb>ID</tb>
+                <tb>Nombre</tb>
+                <tb>Edad</tb>
+                <tb>Acciones</tb>
+            </tr> -->
+            <div>Hola como andas</div>
         </tbody>
+        <tbody>Hola</tbody>
+        <tbody>Como andas</tbody>
     </table>
 
-    <script src="crudEmpleados.mjs"></script>
+    <script src="./index.mjs" type ="module"></script>
 
 </body>
 </html>
