--- a/index.html
+++ b/index.html
@@ -109,20 +109,10 @@
                 <th>Acciones</th>
             </tr>
         </thead>
-        <tbody id = "cuerpo">
-            <!-- <tr>
-                <tb>ID</tb>
-                <tb>Nombre</tb>
-                <tb>Edad</tb>
-                <tb>Acciones</tb>
-            </tr> -->
-            <div>Hola como andas</div>
-        </tbody>
-        <tbody>Hola</tbody>
-        <tbody>Como andas</tbody>
+        <tbody id="cuerpo"> </tbody>
     </table>
 
-    <script src="./index.mjs" type ="module"></script>
+    <script type="module" src="./index.mjs" ></script>
 
 </body>
 </html>
