--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
         .delete-btn {
             background-color: #f44336;
         }
+
+        #tipoEmpleado {
+            margin-bottom: 2rem;
+            font-size: 15px;
+            width: 100%;
+            padding: 8px;
+            margin: 5px 0 15px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+            
+        }
     </style>
 </head>
 <body>
@@ -88,16 +100,20 @@
         <label for="documento">Numero documento:</label>
         <input type="number" id="documento" name="documento" required>
 
-        <label for="edad">Edad:</label>
-        <input type="number" id="edad" name="edad" required>
-
         <label for="fecha-nacimiento">Fecha de nacimiento (AAAA-MM-DD):</label>
         <input type="text" id="fecha-nacimiento" name="fecha-nacimiento" required>
 
-        <label for="contrasena">Contraseña:</label>
-        <input type="text" id="contrasena" name="contrasena" required>
+        <label for="password">Contraseña:</label>
+        <input type="text" id="password" name="password" required>
+        
+        <label for="tipoEmpleado">Categoria:</label>
+        <select id="tipoEmpleado" name="tipoEmpleado">
+            <option value="profesional">Profesional</option>
+            <option value="noProfesional">No Profesional</option>
+            <option value="jerarquico">Jerarquíco</option>
+        </select>
 
-        <input type="submit" value="Agregar Empleado">
+        <input type="submit" id="agregar-empleado" value="Agregar Empleado">
     </form>
 
     <table id="employeeTable">
@@ -105,8 +121,9 @@
             <tr>
                 <th>ID</th>
                 <th>Nombre</th>
-                <th>Edad</th>
-                <th>Acciones</th>
+                <th>Fecha de nacimiento</th>
+                <th>Domicilio</th>
+                <th>Categoria</th>
             </tr>
         </thead>
         <tbody id="cuerpo"> </tbody>
